--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <h1>BlackJack</h1>
+    <p id="message-el">Want to play a round?</p>
+    <p>Cards:</p>
+    <p>Sum:</p>
+    <button onclick="startGame()">START GAME</button>
+    <script src="index.js"></script>
+  </body>
 </html>
