--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <link href="style.css" rel="stylesheet" />
-    <script src="index.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -10,9 +9,10 @@
   <body>
     <h1>BlackJack</h1>
     <p id="message-el">Want to play a round?</p>
-    <p>Cards:</p>
-    <p>Sum:</p>
+    <p id="cards-el">Cards:</p>
+    <p id="sum-el">Sum:</p>
     <button onclick="startGame()">START GAME</button>
+    <button onclick="newCard()">NEW CARD</button>
     <script src="index.js"></script>
   </body>
 </html>
